// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders menu for active type CHART and type MAP 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-10"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 14h4v-4H4v4zm0 5h4v-4H4v4zM4 9h4V5H4v4zm5 5h12v-4H9v4zm0 5h12v-4H9v4zM9 5v4h12V5H9z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Table
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-10"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Map
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type CHART and type REPORT_TABLE 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-37"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 14h4v-4H4v4zm0 5h4v-4H4v4zM4 9h4V5H4v4zm5 5h12v-4H9v4zm0 5h12v-4H9v4zM9 5v4h12V5H9z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Table
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-37"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Map
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type EVENT_CHART and type EVENT_REPORT 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-55"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 14h4v-4H4v4zm0 5h4v-4H4v4zM4 9h4V5H4v4zm5 5h12v-4H9v4zm0 5h12v-4H9v4zM9 5v4h12V5H9z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Table
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type EVENT_REPORT and type EVENT_CHART 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-46"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Chart
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type MAP and type CHART 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-1"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Chart
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-1"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 14h4v-4H4v4zm0 5h4v-4H4v4zM4 9h4V5H4v4zm5 5h12v-4H9v4zm0 5h12v-4H9v4zM9 5v4h12V5H9z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Table
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type MAP and type MAP without Thematic layer 1`] = `
<div>
  <span
    class="jsx-611321200"
    data-test="dhis2-uicore-tooltip-reference"
  >
    <li
      class="jsx-665727467 disabled dense"
      data-test="dhis2-uicore-menuitem"
    >
      <a
        class="jsx-665727467"
      >
        <span
          class="jsx-665727467 icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-19"
            focusable="false"
            role="presentation"
            style="fill: #6e7a8a;"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="jsx-665727467 label"
        >
          View as Chart
        </span>
      </a>
    </li>
  </span>
  <span
    class="jsx-611321200"
    data-test="dhis2-uicore-tooltip-reference"
  >
    <li
      class="jsx-665727467 disabled dense"
      data-test="dhis2-uicore-menuitem"
    >
      <a
        class="jsx-665727467"
      >
        <span
          class="jsx-665727467 icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-19"
            focusable="false"
            role="presentation"
            style="fill: #6e7a8a;"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 14h4v-4H4v4zm0 5h4v-4H4v4zM4 9h4V5H4v4zm5 5h12v-4H9v4zm0 5h12v-4H9v4zM9 5v4h12V5H9z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="jsx-665727467 label"
        >
          View as Table
        </span>
      </a>
    </li>
  </span>
</div>
`;

exports[`renders menu for active type REPORT_TABLE and type CHART 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-28"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Chart
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-28"
          focusable="false"
          role="presentation"
          style="fill: #6e7a8a;"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        View as Map
      </span>
    </a>
  </li>
</div>
`;
